--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alumnitraker-2.0-front",
   "version": "0.1.0",
   "private": true,
-  "proxy":"https://alumni-tracking-system.herokuapp.com/",
+  "proxy":"http://localhost:5000/",
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
